--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
 	"name": "eureka",
 	"devDependencies": {
 		"@webgpu/types": "^0.1.67"
+	},
+	"dependencies": {
+		"@loaders.gl/core": "^4.3.4"
 	}
 }
