Migrate engine to wgpu-matrix renderer
Replace legacy renderer and component architecture with a new
wgpu-matrix-based Engine and Renderer. Remove many old sprite/3D modules
and component types, add Mesh and Light primitives and the wgpu-matrix
dependency, and update index/index.html entrypoint and TODO entries.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"@webgpu/types": "^0.1.67"
 	},
 	"dependencies": {
-		"@loaders.gl/core": "^4.3.4"
+		"@loaders.gl/core": "^4.3.4",
+		"wgpu-matrix": "^3.4.0"
 	}
 }
