--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "types": ["@webgpu/types", "wgpu-matrix"],
     "target": "ES2024",
-    "moduleResolution": "bundler"
-  }
+    "moduleResolution": "bundler",
+    "experimentalDecorators": true
+  },
+  "reflection": true
 }
