Add ECS metadata, PointerManager, and Vite config
Move and convert game components to decorator-based modules and add
generated ECS loader (src/opulence-ecs). Add PointerManager for array
buffer pointers, new component files (mesh, transform), and tests.
Update build to use SWC (vite plugin), emit decorator metadata, and
adjust deps/tsconfig/.swcrc. Add index.html, update .gitignore and
remove unused resource assets.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "types": ["@webgpu/types", "wgpu-matrix"],
-    "target": "ES2024",
+    "types": ["@webgpu/types", "wgpu-matrix", "vite/client"],
+    "target": "ESNext",
     "moduleResolution": "bundler",
-    "experimentalDecorators": true
+    "module": "Preserve",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "reflection": true
 }
