--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 node_modules/**.**
 node_modules/.pnpm-workspace-state-v1.json
 node_modules/
+
+dist/
+benchmark/
+archive/
+src/files/README-GLTF.md
