--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
 		"@webgpu/types": "^0.1.67",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.9.3",
+		"unplugin-swc": "^1.5.9",
 		"vite": "^7.2.7"
 	},
 	"dependencies": {
 		"@deepkit/type": "^1.0.19",
 		"@loaders.gl/core": "^4.3.4",
 		"@loaders.gl/gltf": "^4.3.4",
+		"reflect-metadata": "^0.2.2",
+		"vite-plugin-swc-transform": "^1.1.1",
 		"wgpu-matrix": "^3.4.0"
 	}
 }
