--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 	"dependencies": {
 		"@loaders.gl/core": "^4.3.4",
 		"@loaders.gl/gltf": "^4.3.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@swc/core": "^1.15.5",
 		"reflect-metadata": "^0.2.2",
 		"rollup-plugin-swc3": "^0.12.1",
-		"wgpu-matrix": "^3.4.0"
+		"svelte": "^5.46.0",
+		"wgpu-matrix": "^3.4.0",
+		"wgsl-debug": "^0.0.1"
 	}
 }
