more cleanup, error fixing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "types": ["@webgpu/types", "wgpu-matrix", "vite/client"],
-    "target": "es2022",
+    "target": "esnext",
     "moduleResolution": "bundler",
     "module": "ESNext",
     "useDefineForClassFields": true,
