--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "eureka",
+	"name": "oppulence",
 	"devDependencies": {
 		"@types/bun": "^1.3.6",
 		"@webgpu/types": "^0.1.67",
+		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
