make the component parser more expandable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "src/generated/**/*",
     "generated/**/*",
     "game_src/**/*",
-    "compiler/component_parsers.ts",
+    "compiler/**/*",
   ],
   
 }
