--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
+		"cannon-es": "^0.20.0",
+		"physx-js-webidl": "^2.7.1",
 		"ts-morph": "^27.0.2",
+		"vite-plugin-wasm": "^3.5.0",
 		"wgpu-matrix": "^3.4.0"
 	}
 }
